2012-07-06 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Add PATJobTransformsSignatures.pickle dummy file (avoid CMT warning)
    * Give correct location for PATJobTransformsSignatures.pickle in requirements (../share)
    
2012-07-05 Nurcan Ozturk <nurcan@uta.eduh>
        * Corrected 'Outputntup_TAUMEDIUMFile' to 'outputNTUP_TAUMEDIUMFile' in MergeNTUP_trf.py
        * Tagging as PATJobTransforms-00-04-25

2012-06-29 Nurcan Ozturk <nurcan@uta.eduh>
        * Added NTUP_TAU and NTUP_TAUFULL D3PD formats to MergeNTUP_trf.py
        * Tagging as PATJobTransforms-00-04-24

2012-06-28 Attila Krasznahorkay <Attila.Krasznahorkay@cern.ch>
	* Added the NTUP_TAUFULL D3PD format to Reco_trf.py
	* Tagging as PATJobTransforms-00-04-23

2012-06-25 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Add mergeChunks argument for recursive merging (Configuration.py, MergeNTUP_trf.py)
    * Add rhadd.py to manage recursive merging
    * Switch to rhadd.py if mergeChunks is defined in skeleton.MergeNTUP_trf.py
    * Tagging as PATJobTransforms-00-04-22    

2012-06-22 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Move pickled arg list into share area with sensible name/path (requirements)
    * Improvements to mk-trf-argpickle 

2012-06-21 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Remove unnecessary job options in merging skeletons for HITS and RDO (r17 compatible only)
    * Tagging as PATJobTransforms-00-04-21

2012-06-19 Attila Krasznahorkay <Attila.Krasznahorkay@cern.ch>
	* Adding the NTUP_TAU type to Reco_trf.py for the production
	  system to know about it.
	* Tagging as PATJobTransforms-00-04-20

2012-06-11 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Add outputNTUP_PHYSVALFile as recognised argument in Configuration.py
    * Add d3pdVal, outputNTUP_PHYSVALFile to LODPK in ValidateD3PD_trf and correct typo for --ignoreerrors
    * Improve ValidateD3PD_trf comments
    * Tagging as PATJobTransforms-00-04-19
